--- a/client/src/components/Cards/cardsStyle.css
+++ b/client/src/components/Cards/cardsStyle.css
@@ -1,7 +1,44 @@
-.cards-list {
-    width: 80%;
-    margin: 0;
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-gap: 20px;
+.cards-list{
+    width: 100%;
+    margin: 10px auto;
+    padding: 5px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.bodyCards{
+    margin: 10px 0px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.card{
+    width: 18%;
+    min-width: 185px;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px auto 20px auto;
+    border: 1px solid black;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px white;
+    cursor: pointer;
+    transition: all .3s;
+}
+.card:hover{
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+@media screen and (max-width: 374px) {
+    .card{
+        min-width: 49%;
+    }
 }
