--- a/client/src/views/Home/homeStyle.css
+++ b/client/src/views/Home/homeStyle.css
@@ -1,28 +1,82 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background: linear-gradient(
-        to left,
-        rgb(218, 159, 159)0%,
-        rgb(182, 89, 89)100%
-    );
-    text-align: center;
+/* 
+.home{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    overflow-x: scroll;
 }
 
 .home-title {
     margin-top: 75px;
     margin-bottom: 50px;
-    font-size: 76px;
+    font-size: 60px;
     color: white;
     font-family: "Bigelow Rules";
 }
 
+.inicio{
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 1px 1px;
+    box-shadow: 3px 3px 7px black;
+    cursor: pointer
+} */
+
 .home {
+    background-image: url('https://static.vecteezy.com/system/resources/previews/026/476/953/non_2x/world-map-illustration-modern-blue-background-with-world-map-technology-background-generative-ai-free-photo.jpg');
+    background-size: cover;     
+    background-position: center;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.inicio {
+    margin-bottom: 20px;
+}
+
+.inicio button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.inicio button:hover {
+    background-color: #0056b3;
+}
+
+.header {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+}
+
+.createActivity {
+    margin-left: 100px;
+}
+
+.home-title {
+    color: white;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.create-activity-btn {
+    background-color: #0056b3;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
