--- a/client/src/components/Filtros/filtrosStyle.css
+++ b/client/src/components/Filtros/filtrosStyle.css
@@ -1,4 +1,6 @@
 .filter-container {
+    position: relative;
+    left: 5%;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end; 
@@ -10,4 +12,9 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     width: 150px;
+}
+
+.filter{
+    display: inline-block;
+    margin-right: 10px;
 }
