--- a/client/src/components/Activities/activitiesStyle.css
+++ b/client/src/components/Activities/activitiesStyle.css
@@ -1,3 +1,8 @@
+.activities{
+    position: relative;
+    left: 10%;
+}
+
 .listActivities{
     width: 100%;
     margin: 20px auto;
@@ -41,6 +46,11 @@
     text-decoration: none;
     font-family:sans-serif, 'Courier New', Courier, monospace;
     color: white
+}
+
+.borrar{
+    position: relative;
+    right: 6%;
 }
 
 .btn-delete{
