--- a/client/src/components/Form/formStyle.css
+++ b/client/src/components/Form/formStyle.css
@@ -34,16 +34,17 @@
 }
 
 .listaPaises{
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 10px;
     font-size: 1rem;
     display: flex;
     flex-wrap: wrap;
     margin-right: 50px;
 }
+
 .listaPaises p{
     border-radius: 10px;
-    background-color: rgb(138, 138, 233);
+    background-color: rgb(60, 60, 146);
     padding: 1px 4px;
     margin: 3px;
     width: fit-content;
@@ -51,7 +52,6 @@
 }
 
 .iconClose{
-    margin-left: 1px;
     cursor: pointer;
     transition: all .3s;
     border: none;
@@ -63,15 +63,32 @@
 }
 
 .botones{
-    width: fit-content;
-    padding: 0px 15px;
-    font-weight: bold;
-    border-radius: 10px;
-    font-size: 1.3rem;
-    margin: 15px;
+    margin-top: 2%;
+    position: relative;
+    right: 6%;
+}
+
+.listaPaises button{
+    position: relative;
+    left: 2%;
+}
+
+.Nombre label{
+    width: 50%;
+    text-align: center;
+    font-size: 2.5rem;
     color: white;
-    cursor: pointer;
-    box-shadow: 2px 2px 8px black;
+    text-shadow: 2px 0px 2px black, 0px 2px 2px black, -2px 0px 2px black, 0px -2px 2px black;
+}    
+
+.error-message {
+    color: red;
+    font-size: 1rem;
+    margin-top: 5px;
+}
+
+.error-field {
+    border: 2px solid red !important; 
 }
 
 
